create API CRUD Product, Type. Modify code, fix some bugs.

--- a/T-Shop.Client.MVC/Views/Product/Index.cshtml
+++ b/T-Shop.Client.MVC/Views/Product/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<T_Shop.Shared.DTOs.Product.ProductDto>
+﻿@model IEnumerable<ProductResponseModel>
 
 @{
     ViewData["Title"] = "Index";
