init db + validate, fix bug TypeAPI

--- a/T-Shop.Client.MVC/Views/Product/Index.cshtml
+++ b/T-Shop.Client.MVC/Views/Product/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<ProductResponseModel>
+﻿@using T_Shop.Shared.DTOs.Product.ResponseModel
+@model IEnumerable<ProductResponseModel>
 
 @{
     ViewData["Title"] = "Index";
