--- a/T-Shop.Client.MVC/Views/Shared/_Layout.cshtml
+++ b/T-Shop.Client.MVC/Views/Shared/_Layout.cshtml
@@ -56,9 +56,9 @@
                     </div>
                 </div>
             </div>
-            <div class="container px-0">
-            <nav class="navbar navbar-light navbar-expand-xl bg-white">
-                <a href="" class="navbar-brand"><h1 style="color: #f50a0a" class="display-6">T-Shop</h1></a>
+        <div class="container px-0 bg-transparent">
+            <nav class="navbar navbar-light navbar-expand-xl">
+                <a href="" class="navbar-brand"><h1 class="display-6 text-logo-color">T-Shop</h1></a>
                     <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars text-primary"></span>
                     </button>
@@ -75,15 +75,15 @@
                             <a style="font-size: 20px; font-weight: 900" href="contact" class="nav-item nav-link">Contact</a>
                         </div>
                         <div class="d-flex m-3 me-0">
-                           <a href="#" class="position-relative me-4 my-auto">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#f50a0a" class="bi bi-cart cartbtn" viewBox="0 0 16 16">
+                           <a href="/cart" class="position-relative me-4 my-auto">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="black" class="bi bi-cart cartbtn" viewBox="0 0 16 16">
                                 <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
                             </svg>
-                            <span class="position-absolute rounded-circle d-flex bg-info align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 15px; height: 20px; min-width: 20px;">3</span>
+                            <span class="position-absolute rounded-circle d-flex align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 15px; height: 20px; min-width: 20px; background-color: #edebeb">3</span>
                             </a>
 
 
-                        <a href="#" class="my-auto" style="color: #3B71CA">
+                        <a href="#" class="my-auto" style="color: black">
                                 <i class="fas fa-user fa-2x"></i>
                             </a>
                         </div>
@@ -105,7 +105,7 @@
                 <div class="row g-4">
                     <div class="col-lg-3">
                         <a href="#">
-                            <h1 style="color: #f50a0a" class="mb-0">T-Shop</h1>
+                            <h1 class="mb-0 text-logo-color display-6">T-Shop</h1>
                             <p class="text-secondary mb-0">Car Shop</p>
                         </a>
                     </div>
