--- a/T-Shop.Client.MVC/Views/Product/_ProductListPartial.cshtml
+++ b/T-Shop.Client.MVC/Views/Product/_ProductListPartial.cshtml
@@ -103,32 +103,33 @@
     </div>
     }
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-<script>
-    $(document).ready(function () {
-        $(document).on('click', '.add-to-cart-button', function (e) {
-            e.preventDefault(); 
+@section Scripts{
+    <script>
+        $(document).ready(function () {
+            $(document).on('click', '.add-to-cart-button', function (e) {
+                e.preventDefault();
 
-            var productId = $(this).data('product-id');
+                var productId = $(this).data('product-id');
 
-            $.ajax({
-                url: '@Url.Action("AddToCart", "Cart")',
-                type: 'POST',
-                data: { productId: productId },
-                success: function (response) {
-                    if (response.success) {
-                        // alert(response.message);
-                        // Optionally update the cart summary or other UI elements
-                        // $('#cart-summary').html('Total Items: ' + response.cart.items.length);
-                    } else {
-                        // alert(response.message);
+                $.ajax({
+                    url: '@Url.Action("AddToCart", "Cart")',
+                    type: 'POST',
+                    data: { productId: productId },
+                    success: function (response) {
+                        if (response.success) {
+                            // alert(response.message);
+                            // Optionally update the cart summary or other UI elements
+                            // $('#cart-summary').html('Total Items: ' + response.cart.items.length);
+                        } else {
+                            // alert(response.message);
+                        }
+                    },
+                    error: function () {
+                        alert('An error occurred while adding the item to the cart.');
                     }
-                },
-                error: function () {
-                    alert('An error occurred while adding the item to the cart.');
-                }
+                });
             });
         });
-    });
-</script>
+    </script>
+}
