modify quantity of product after payment

--- a/T-Shop.Client.MVC/Views/Order/Index.cshtml
+++ b/T-Shop.Client.MVC/Views/Order/Index.cshtml
@@ -153,7 +153,7 @@
                         // Inform the customer that there was an error.
                         alert("Payment failed with: ", result.error.toString());
                     } else {
-                        window.location.href = '/order/success';
+                        window.location.href = '/order/successpayment';
                     }
                 });
         });
